[package]
name = "chat-app-rs-455"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Todd <andrew.s.todd@wsu.edu>"]
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.2.1", features = ["serde", "v4"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.18", features = ["derive"] }
bincode = "1.3.3"
